load("@rules_cc//cc:defs.bzl", "cc_library")

package(
    default_visibility = ["//visibility:public"],
)

cc_library(
    name = "FCore-Examples",
    deps = ["@FCore-Examples//:app_TSPfcore"],
)

cc_library(
    name = "EternityII",
    deps = ["@EternityII//:app_Example"],
)


cc_library(
    name = "KP",
    deps = ["@KP//:app_Example"],
)

cc_library(
    name = "TSP",
    deps = ["@TSP//:app_Example"],
)
