load("@rules_cc//cc:defs.bzl", "cc_library", "cc_binary")

package(
    default_visibility = ["//visibility:public"],
)

cc_library(
    name = "OptFCore",
    deps = ["//src/OptFCore:all_hpp", ":OptFrame"],
)

cc_library(
    name = "OptFrame",
    deps = ["//src/OptFrame:all_hpp", ":printable"],
)

cc_library(
    name = "printable",
    deps = ["//src/OptFrame/printable:printable_lib"],
)
