#load("@rules_cc//cc:defs.bzl", "cc_library", "cc_binary")

package(
    default_visibility = ["//visibility:public"],
)

cc_library(
    name = "OptFrame-Core-Examples",
    deps = ["//include/OptFrame-Core-Examples:core-examples-hpp"],
)

cc_library(
    name = "OptFCore",
    deps = ["//include/OptFCore:all_hpp", ":OptFrame"],
)

cc_library(
    name = "OptFrame",
    deps = ["//include/OptFrame:all_hpp", ":printable"],
)

cc_library(
    name = "printable",
    deps = ["//include/OptFrame/printable:printable_lib"],
)
