#load("@rules_cc//cc:defs.bzl", "cc_library", "cc_binary")

package(
    default_visibility = ["//visibility:public"],
)

cc_library(
    name = "OptFrame-Core-Examples",
    deps = ["//include/OptFrame-Core-Examples:core-examples-hpp"],
)

cc_library(
    name = "OptFCore",
    deps = [
        ":OptFrame",
        "//include/OptFCore:all_hpp",
    ],
)

cc_library(
    name = "OptFrame",
    deps = [
        ":modlog",
        ":printable",
        "//include/OptFrame:all_hpp",
    ],
)

cc_library(
    name = "OptFrameLib",
    deps = [
        ":printable",
        "//include/OptFrameLib:all_hpp",
    ],
)

cc_library(
    name = "printable",
    deps = ["//include/OptFrame/printable:printable_lib"],
)

cc_library(
    name = "modlog",
    deps = ["//include/OptFrame/modlog:modlog_lib"],
)
