#load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(default_visibility = ["//visibility:public"])

cc_test(
    name = "OptFrame-test",
    #srcs = ["OptFrame.Test.cpp"],
    srcs = glob([
        "OptFrame.Test.cpp",
        "OptFrame-test/**/*.hpp",
        #"OptFrame-test/**/*.h",
    ]),
    defines = ["CATCH_CONFIG_MAIN"],
    deps = [
        "//include:OptFCore",
        "//include:OptFrame",
        "//include:OptFrame-Core-Examples",
        "@catch2//:catch2_main",
    ],
    #":catch2_thirdparty"],
)

cc_test(
    name = "OptFrameLib-test-kp",
    srcs = [
        "OptFrameLib-test/optframelib_kp.Test.cpp",
    ],
    deps = [
        "//include:OptFrameLib",
        "//include/OptFrame-Core-Examples:core-examples-hpp",
        "//src/OptFrameLib:lib_src",
        # "@ut//:ut",
        "@ut",
    ],
)

cc_test(
    name = "OptFrameLib-test-tsp",
    srcs = [
        "OptFrameLib-test/optframelib_tsp.Test.cpp",
    ],
    deps = [
        "//include:OptFrameLib",
        "//include/OptFrame-Core-Examples:core-examples-hpp",
        "//src/OptFrameLib:lib_src",
        # "@ut//:ut",
        "@ut",
    ],
)

cc_test(
    name = "OptFrameLib-test-base",
    srcs = [
        "OptFrameLib-test/optframelib_base.Test.cpp",
    ],
    deps = [
        "//include:OptFrameLib",
        "//include/OptFrame-Core-Examples:core-examples-hpp",
        "//src/OptFrameLib:lib_src",
        # "@ut//:ut",
        "@ut",
    ],
)

'''
cc_test(
    name = "all_ut_test",
    srcs = glob([
        "all_ut.cpp",
    ]),
    cxxopts = ["-std=c++20"],
    deps = ["//include:OptFrame", 
    "//include:OptFCore",
     "//include:OptFrame-Core-Examples", 
     "@ut//:ut"],
)

cc_test(
    name = "all_ut2_test",
    srcs = glob([
        "all_ut2.cpp",
    ]),
    cxxopts = ["-std=c++20"],
    deps = ["//include:OptFrame", 
    "//include:OptFCore",
     "//include:OptFrame-Core-Examples", 
     "@ut//:ut"],
)
'''

#cc_library(
#    name = "catch2_thirdparty",
#    hdrs = ["thirdparty/catch2/catch_amalgamated.hpp"],
#    srcs = ["thirdparty/catch2/catch_amalgamated.cpp"],
#    strip_include_prefix="thirdparty/",
#    #include_prefix = "catch2/"
#)

test_suite(
    name = "all-tests",
    tests = [
        "OptFrame-test",
    ],
)
