load("@rules_cc//cc:defs.bzl", "cc_binary")

package(
    default_visibility = ["//visibility:public"],
)

cc_binary(
    name = "app_Example",
    srcs = glob([
        "src/**/*.h", 
        "src/**/*.cpp"
    ]),
    ##copts = ['-std=c++17', '-fconcepts', '-Wfatal-errors'],
    data = glob([
        "pieces_set_2/*.txt",
    ]),
    deps = ["@OptFrame//include:OptFrame"]
)
