#load("@rules_cc//cc:defs.bzl", "cc_binary")

package(
    default_visibility = ["//visibility:public"],
)

cc_binary(
    name = "app_Example",
    srcs = glob([
        "src/**/*.cpp"
    ]),
    ##copts = ['-std=c++20', '-Wfatal-errors'],
    data = glob([
        "pieces_set_2/*.txt",
    ]),
    deps = ["@optframe//include:OptFrame", "//include:EtII_lib"]
)
