load("@rules_cc//cc:defs.bzl", "cc_library", "cc_binary")

package(
    default_visibility = ["//visibility:public"],
)

#cc_binary(
#    name = "app_TSPfcore_sc",
#    srcs = ["src/mainTSP_fcore_sc.cpp"],
#    copts = ['-std=c++20', '-fconcepts'],
#    deps = [":TSPfcore"],
#)


cc_binary(
    name = "app_TSPfcore",
    srcs = ["src/mainTSP-fcore.cpp"],
    copts = ['-std=c++17', '-fconcepts', '-Wfatal-errors'],
    deps = [":TSPfcore"],
)

cc_library(
    name = "TSPfcore",
    hdrs = ["src/TSP-fcore.hpp"],
    deps = ["@OptFrame//include:OptFCore"]
)

#cc_binary(
#    name = "app_TSPfxcore",
#    srcs = ["src/mainTSP-fxcore.cpp", "src/TSP-fxcore.hpp"],
#    copts = ['-std=c++20', '-fcoroutines'],
#    deps = ["@OptFrame//include:OptFCore"]
#)
