#load("@rules_cc//cc:defs.bzl", "cc_library", "cc_binary")

package(
    default_visibility = ["//visibility:public"],
)

cc_binary(
    name = "app_BTSPfcore",
    srcs = ["src/mainBTSP-fcore.cpp"],
    #copts = ['-std=c++20', '-Wfatal-errors'],
    deps = ["@OptFrame//include/OptFrame-Core-Examples:core-examples-hpp"],
)

#cc_library(
#    name = "BTSPfcore",
#    hdrs = ["src/BTSP-fcore.hpp"],
#    deps = ["@OptFrame//include:OptFCore"]
#)


