load("@rules_cc//cc:defs.bzl", "cc_library", "cc_binary")

package(
    default_visibility = ["//visibility:public"],
)

cc_binary(
    name = "app_Example",
    srcs = glob([
        "src/*.h", 
        "src/*.cpp",
        "src/*.hpp",
        "src/Util/*.h", 
        "src/Util/*.cpp",
        "src/Util/*.hpp",
        "src/NS/*.h", 
        "src/NS/*.cpp",
        "src/NS/*.hpp",
        "src/mainForecastingCodes/*.hpp"
    ]),
    data = glob([
        "Instance/*",
    ]),
    linkopts = ['-lgomp'],
    copts = ['-fopenmp'],
    deps = ["@OptFrame//src:OptFrame"]
)
