load("@rules_cc//cc:defs.bzl", "cc_library", "cc_binary")
cc_binary(
    name = "mainHFMVRP",
    srcs = ["src/mainHFMVRP.cpp"],
    deps=["@OptFrame//include:OptFCore", "//include:HFMVRP_lib"],
    copts = select({
        "@bazel_tools//src/conditions:windows": ["/std:c++17"],
        "@bazel_tools//src/conditions:darwin": ["--std=c++17"],
        "//conditions:default": ["--std=c++17"],
    }),
)
