load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

cc_binary(
    name = "app_KP01_generic",
    srcs = [
        "src/solver_kp01_generic/mainSolverKP.cpp",
        "src/solver_kp01_generic/solver_kp01_generic.cpp",
    ],
    copts = [
        "-std=c++17",
        "-fconcepts",
        "-Wfatal-errors",
    ],
    deps = [
        "lib_solver_kp01_generic",
        "@OptFrame//src:OptFCore",
    ],
)

cc_library(
    name = "lib_solver_kp01_generic",
    hdrs = ["src/solver_kp01_generic/solver_kp01_generic.h"],
    strip_include_prefix = "src/",
    deps = ["solver_kp01_generic"],
)

cc_library(
    name = "solver_kp01_generic",
    ##srcs = ["TSP-fcore.hpp"],
    #include_prefix="OptFCore",
    #hdrs = glob(["**/*.hpp"]),
    hdrs = glob([
        "src/solver_kp01_generic/**/*.hpp",
    ]),
    #include_prefix = "nlohmann/",
    strip_include_prefix = "src/",
    #hdrs = ["FCore.hpp", "FConstructive.hpp"]
    deps = ["nlohmann"],
)

cc_library(
    name = "nlohmann",
    ##srcs = ["TSP-fcore.hpp"],
    #include_prefix="OptFCore",
    #hdrs = glob(["**/*.hpp"]),
    hdrs = glob([
        "libs/nlohmann/**/*.hpp",
    ]),
    #include_prefix = "nlohmann/",
    strip_include_prefix = "libs/",
    #hdrs = ["FCore.hpp", "FConstructive.hpp"]
)
