load("@rules_cc//cc:defs.bzl", "cc_library", "cc_binary")

package(
    default_visibility = ["//visibility:public"],
)

cc_binary(
    name = "app_Example",
    srcs = glob([
        "src/**/*.h", 
        "src/**/*.cpp"
    ]),
    data = glob([
        "tsplib/*",
    ]),
    deps = ["@OptFrame//src:OptFrame"]
)
