#load("@rules_cc//cc:defs.bzl", "cc_library", "cc_binary", "cc_import")

package(
    default_visibility = ["//visibility:public"],
)

cc_binary(
    name = "app_Example",
    srcs = glob([
        "src/**/*.h", 
        "src/**/*.cpp"
    ]),
    data = glob([
        "tsplib/*",
    ]),
    copts = ['-Wfatal-errors'],
    deps = ["@optframe//include:OptFrame", "@optframe//include/OptFrame:all_hpp"]
)
