load("@rules_cc//cc:defs.bzl", "cc_binary")

package(
    default_visibility = ["//visibility:public"],
)

cc_binary(
    name = "app_Example",
    srcs = glob([
        "src/**/*.h",
        "src/**/*.cpp",
    ]),
    copts = ["-Wfatal-errors"],
    data = glob([
        "tsplib/*",
    ]),
    deps = [
        "@optframe//include:OptFrame",
        "@optframe//include/OptFrame:all_hpp",
    ],
)
