load("@rules_cc//cc:defs.bzl", "cc_binary")

package(default_visibility = ["//visibility:public"])

cc_binary(
    name = "app_demo_opt",
    srcs = ["OptFCore_load.cpp"],
    deps = ["//include:OptFCore"],
    copts = ['--std=c++17', '-fconcepts', '-Wfatal-errors']
)

filegroup(
    name = "srcs",
    srcs = glob(["**"]),
)
