###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################


bazel_dep(name = "optframe", dev_dependency = True)
git_override(
    module_name = "optframe",
    remote = "https://github.com/optframe/optframe.git",
    branch='master'
    # commit = "5321f7ce0d110a5bd59dbe3294e9de9f6012ba6a"
)

